Fix for double-height spacing between grid items cf. undergrad landing page

--- a/src/sass/docs.raw.scss
+++ b/src/sass/docs.raw.scss
@@ -7,7 +7,6 @@
 #grid-page {
   .o-wrapper--main > .o-grid__row > .o-grid__box--full {
     .o-grid__row {
-      margin-bottom:20px;
     }
     .o-grid__box {
       min-height:240px;
